--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
   </head>
   <body></body>
-  <script src="./script.js" defer></script>
+  <script src="script.js" defer></script>
 </html>
